# cap-catalog

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  coverage_100.toml
.claude/: handoff.md
.github/: pull_request_template.md
.github/workflows/: cache-cleanup.yml  catalog-build-upload.yml  catalog-extract.yml  ci.yml  dev-release.yml  release.yml
crates/cap-catalog-builder/: Cargo.toml
crates/cap-catalog-builder/src/: main.rs
crates/cap-catalog-schema/: Cargo.toml
crates/cap-catalog-schema/src/: lib.rs
crates/cap-cli/: Cargo.toml
crates/cap-cli/src/: main.rs
schema/: catalog.sql
scripts/: check-features-gate.py  extract-rust.py
tests/: schema_smoke.py  test_check_features_gate.py  test_extract_rust.py
