[package]
name = "cap-catalog-builder"
version = "0.1.0"
description = "Build catalog.sqlite from catalog-extract.jsonl streams"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "cap-catalog-build"
path = "src/main.rs"

[dependencies]
cap-catalog-schema = { path = "../cap-catalog-schema" }
rusqlite.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
