[package]
name = "cap-cli"
version = "0.1.0"
description = "cap CLI: query cap-catalog catalog.sqlite from the shell"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "cap"
path = "src/main.rs"

[dependencies]
cap-catalog-schema = { path = "../cap-catalog-schema" }
clap = { version = "4", features = ["derive", "env"] }
rusqlite.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
